docs/book/samples/appa/unused_expr_check.out
error[unused]: this value is never used: a non-final line binds a name, or is an effect joining the group
  --> unused_expr_check.kso:1:3
   1 | 1 + 1
         ^
